// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Truncate component should render correctly block clicking on expand toggles to collapse 1`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
  <StackItem>
    <Button
      className="ins-c-collapse-button"
      onClick={[Function]}
      variant="link"
    >
      Custom collapse
    </Button>
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block clicking on expand toggles to collapse 2`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
  <StackItem>
    <Button
      className="ins-c-collapse-button"
      onClick={[Function]}
      variant="link"
    >
      Custom collapse
    </Button>
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block custom button titles 1`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
  <StackItem>
    <Button
      className="ins-c-collapse-button"
      onClick={[Function]}
      variant="link"
    >
      Custom collapse
    </Button>
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block custom button titles 2`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
  <StackItem>
    <Button
      className="ins-c-collapse-button"
      onClick={[Function]}
      variant="link"
    >
      Custom collapse
    </Button>
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block custom expande button 1`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
  <StackItem>
    <Button
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Custom expand
    </Button>
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block custom expande button 2`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
  <StackItem>
    <Button
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Custom expand
    </Button>
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block hovering over toggles to collapse 1`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block hovering over toggles to collapse 2`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block hovering over toggles to collapse 3`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block when text length is less than user specified length 1`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block with short length 1`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lo...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
  <StackItem>
    <Button
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Read more
    </Button>
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly block without length specified 1`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
  <StackItem>
    <Button
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Read more
    </Button>
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly inline clicking on expand toggles to collapse 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Button
    className="ins-c-collapse-button"
    onClick={[Function]}
    variant="link"
  >
    Custom collapse
  </Button>
</Fragment>
`;

exports[`Truncate component should render correctly inline clicking on expand toggles to collapse 2`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Button
    className="ins-c-collapse-button"
    onClick={[Function]}
    variant="link"
  >
    Custom collapse
  </Button>
</Fragment>
`;

exports[`Truncate component should render correctly inline custom button titles 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Button
    className="ins-c-collapse-button"
    onClick={[Function]}
    variant="link"
  >
    Custom collapse
  </Button>
</Fragment>
`;

exports[`Truncate component should render correctly inline custom button titles 2`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Button
    className="ins-c-collapse-button"
    onClick={[Function]}
    variant="link"
  >
    Custom collapse
  </Button>
</Fragment>
`;

exports[`Truncate component should render correctly inline custom expande button 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Button
    className="ins-c-expand-button"
    onClick={[Function]}
    variant="link"
  >
    Custom expand
  </Button>
</Fragment>
`;

exports[`Truncate component should render correctly inline custom expande button 2`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Button
    className="ins-c-expand-button"
    onClick={[Function]}
    variant="link"
  >
    Custom expand
  </Button>
</Fragment>
`;

exports[`Truncate component should render correctly inline hovering over toggles to collapse 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing...",
      }
    }
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    widget-type="InsightsTruncateInline"
  />
</Fragment>
`;

exports[`Truncate component should render correctly inline hovering over toggles to collapse 2`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    widget-type="InsightsTruncateInline"
  />
</Fragment>
`;

exports[`Truncate component should render correctly inline hovering over toggles to collapse 3`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing...",
      }
    }
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    widget-type="InsightsTruncateInline"
  />
</Fragment>
`;

exports[`Truncate component should render correctly inline when text length is less than user specified length 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
laborum.",
      }
    }
    widget-type="InsightsTruncateInline"
  />
</Fragment>
`;

exports[`Truncate component should render correctly inline with short length 1`] = `
<Stack
  className="ins-c-truncate is-block"
>
  <StackItem>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lo...",
        }
      }
      widget-type="InsightsTruncateBlock"
    />
  </StackItem>
  <StackItem>
    <Button
      className="ins-c-expand-button"
      onClick={[Function]}
      variant="link"
    >
      Read more
    </Button>
  </StackItem>
</Stack>
`;

exports[`Truncate component should render correctly inline without length specified 1`] = `
<Fragment>
  <span
    className="ins-c-truncate is-inline"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad minim veniam, q...",
      }
    }
    widget-type="InsightsTruncateInline"
  />
  <Button
    className="ins-c-expand-button"
    onClick={[Function]}
    variant="link"
  >
    Read more
  </Button>
</Fragment>
`;
